[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Begley Brothers Inc. <begleybrothers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We are using the latest beta release of actix-web
# that relies on tokio 1.x.x
actix-web = "=4.0.0-beta.3"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[dev-dependencies]
cargo-edit = "0.7.0"
cargo-expand = "1.0.5"
cucumber_rust = { package = "cucumber_rust", version = "0.8.3", features = ["macros"] }
# You can use any executor, we use Tokio in this example.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
